Update share.md